[package]
name = "idk"
version = "0.1.0"
edition = "2021"
exclude = ["images/", ".*"]
include = ["/src"]
description = "This is a simple programming language call IDK"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
